fix link spacing, annd MyReview component

--- a/client/src/components/navbar/Navbar.css
+++ b/client/src/components/navbar/Navbar.css
@@ -20,3 +20,7 @@ a {
   padding-top: 0.3em;
   padding-right: 2em;
 }
+
+.main-nav-item {
+  margin-right: 1em;
+}
